[gd_scene load_steps=13 format=2]

[ext_resource path="res://reference_screenshoot.png" type="Texture" id=1]
[ext_resource path="res://scenes/grid.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/canon.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/saucer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/pause.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/texts.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/bunker.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/enemy_bullet.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/game.gd" type="Script" id=9]
[ext_resource path="res://scenes/game_over.tscn" type="PackedScene" id=10]
[ext_resource path="res://sounds/extralive.wav" type="AudioStream" id=11]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 3

[node name="game" type="Node2D"]
script = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -12.0
margin_top = -15.0
margin_right = 615.0
margin_bottom = 813.0
color = Color( 0, 0, 0, 1 )

[node name="canon" parent="." instance=ExtResource( 3 )]
position = Vector2( 60, 680 )

[node name="grid" parent="." instance=ExtResource( 2 )]

[node name="green1" type="ColorRect" parent="."]
visible = false
material = SubResource( 1 )
margin_left = -26.0
margin_top = 570.0
margin_right = 621.0
margin_bottom = 741.0
color = Color( 0.466667, 1, 0.0235294, 1 )

[node name="green2" type="ColorRect" parent="."]
visible = false
material = SubResource( 1 )
margin_left = 65.0
margin_top = 741.0
margin_right = 360.0
margin_bottom = 771.0
color = Color( 0.466667, 1, 0.0235294, 1 )

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.27451 )
margin_right = 604.0
margin_bottom = 803.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="texts" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 25 )

[node name="saucer" parent="." instance=ExtResource( 4 )]
position = Vector2( -23, 135 )

[node name="Bunker1" parent="." instance=ExtResource( 7 )]
position = Vector2( 86, 591 )

[node name="Bunker2" parent="." instance=ExtResource( 7 )]
position = Vector2( 207, 591 )

[node name="Bunker3" parent="." instance=ExtResource( 7 )]
position = Vector2( 328, 591 )

[node name="Bunker4" parent="." instance=ExtResource( 7 )]
position = Vector2( 449, 591 )

[node name="Bullet0" parent="." instance=ExtResource( 8 )]
position = Vector2( -18, 504 )
bulletType = 1

[node name="Bullet1" parent="." instance=ExtResource( 8 )]
position = Vector2( -18, 472 )
bulletType = 2

[node name="Bullet2" parent="." instance=ExtResource( 8 )]
position = Vector2( -18, 440 )

[node name="Respawn_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Pause" parent="." instance=ExtResource( 5 )]
pause_mode = 2
z_index = 10
z_as_relative = false

[node name="GameOver" parent="." instance=ExtResource( 10 )]
visible = false
z_index = 10
z_as_relative = false

[node name="levelUpTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStream_ExtraLive" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[connection signal="canonHit" from="canon" to="." method="_on_canon_canonHit"]
[connection signal="shot" from="canon" to="saucer" method="_on_canon_shot"]
[connection signal="extra_live" from="texts" to="." method="_on_texts_extra_live"]
[connection signal="points_update" from="texts" to="Bullet0" method="_on_texts_points_update"]
[connection signal="points_update" from="texts" to="Bullet1" method="_on_texts_points_update"]
[connection signal="points_update" from="texts" to="Bullet2" method="_on_texts_points_update"]
[connection signal="points" from="saucer" to="texts" method="_on_points"]
[connection signal="timeout" from="Respawn_timer" to="." method="_on_Respawn_timer_timeout"]
[connection signal="timeout" from="levelUpTimer" to="." method="_on_levelUpTimer_timeout"]
